--- a/springboot-basic-app/pom.xml
+++ b/springboot-basic-app/pom.xml
@@ -19,6 +19,7 @@
         <groupId>org.ganfan</groupId>
         <artifactId>springboot-basic-dependencies</artifactId>
         <version>1.0-SNAPSHOT</version>
+       <!-- <relativePath>../springboot-basic-dependencies/pom.xml</relativePath>-->
     </parent>
 
     <groupId>org.ganfan</groupId>
